--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@notifi-network/notifi-react-card": "^0.19.1-alpha.7",
-    "@notifi-network/notifi-react-hooks": "^0.19.1-alpha.7",
+    "@notifi-network/notifi-react-card": "^0.24.0",
+    "@notifi-network/notifi-react-hooks": "^0.24.0",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.5",
     "@solana/wallet-adapter-react-ui": "^0.9.7",
     "@solana/wallet-adapter-wallets": "^0.16.1",
-    "@solana/web3.js": "^1.44.1",
+    "@solana/web3.js": "^1.47.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
