--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@notifi-network/notifi-react-card": "^0.24.1",
-    "@notifi-network/notifi-react-hooks": "^0.24.1",
+    "@notifi-network/notifi-react-card": "^0.25.1-alpha.0",
+    "@notifi-network/notifi-react-hooks": "^0.25.1-alpha.0",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.5",
     "@solana/wallet-adapter-react-ui": "^0.9.7",
@@ -50,6 +50,6 @@
     ]
   },
   "devDependencies": {
-    "@notifi-network/notifi-core": "^0.19.1-alpha.7"
+    "@notifi-network/notifi-core": "^0.25.1-alpha.0"
   }
 }
